--- a/paper/main.tex
+++ b/paper/main.tex
@@ -86,49 +86,72 @@ Further works opened the papoulis-gerchberg algorithm new using areas like signa
 
 %% Paper about signal restoration
 %% Paper about super resolution
-Another application of this algorithm is used for image inpainting by \cite{pg-image-inpaint-2009}. They introduce the PG for this specific scenerio but it has some precautions to use for us. The images they used are extremely dense when comparing with the Lidar. Also, they have single sensory image but we need to optain a fusion. 
+Another application of this algorithm is used for image inpainting by \cite{pg-image-inpaint-2009}. They introduce the PG for this specific scenerio but it has some precautions to use for us. The images they used are extremely dense when comparing with the LiDAR. Also, they have single sensory image but we need to optain a fusion. 
 
-Another work done by \cite{ozbay2015high} that introduce an extended version of PG for 3D point cloud data that is driven by a Lidar sensor. They use this as an upsampling to cope with delayed points when using Lidar in high resolution mode due to the low scan rates of cylindirical scanning ones. But appearantly, it also use single sensory system
+Another work done by \cite{ozbay2015high} that introduce an extended version of PG for 3D point cloud data that is driven by a LiDAR sensor. They use this as an upsampling to cope with delayed points when using LiDAR in high resolution mode due to the low scan rates of cylindirical scanning ones. But appearantly, it also use single sensory system
 
 We introduce our novel approach my putting another extension of PG to the litarature that is the first one uses multi-sensory system. The nature of PG consists some elements. 
 
-%% PG açıklaması başta olsa daha iyi olabilir.
-
 \subsection{Pre-Processing}
-\subsubsection{Data Augmentation}
-Due to the fundamental difference in the representation of depth information between liDAR measurements (point cloud) and stereo depth estimation (dense disparity maps), both data modalities necessitate preprocessing steps involving transformation, conversion, and upsampling to facilitate their integration and subsequent processing.
+
+Due to the fundamental difference in the representation of depth information between LiDAR measurements (point cloud) and stereo depth estimation (dense disparity maps), both data modalities necessitate preprocessing steps involving transformation, conversion, and upsampling to facilitate their integration and subsequent processing.
 
 REVISE - To make these two sensor data processable in a domain, we determine a common modality for these images. This modality is single channel depth image format. The RGB integration wont necessite for using our algorithm.
 
+\subsubsection{Data Cropping}
+
+After projecting the LiDAR image onto the stereo depth image plane, there are some remaining problems. One of them is the boundaries of the depth regions. Since the vertical scan area of the lidar sensor is pretty small (like 30 degrees) we have to crop the stereo depth image also. On the other hand, the stereo depth image have a bound smaller than the lidar scan at the on the horzontal axis. This is appearent, because the lidar horizontal scan area is 360 degrees. Since our algorithm is based on depth images and there are no memories for previously detected points for the frame sensor fusioning, we just ignore this non-overlapping depth data regions.
+
+\subsubsection{Data Augmentation}
+
 Stereo depth augmentation requirement is originated from the deficit nature of the disparity maps that are used in depth estimation from stereo cameras. The depth images, due to the disparity maps, have some null values at blind spots that one of the cameras have no view at all. These null values at the depth images should be pre-processed before the PG algorithm to avoid the distortion of the well estimated depth entities (pixels).
 
-We proposed a method to overcome the null value problem. This method fills the gaps (null values at the depth images) by using the lidar measurements. Firstly, a segmentation of the gaps are made and then the lidar measurements are taken into account to fill the gap segments that are overlapped with lidar measurements. Again, due to the sparse nature of the lidar measurements, we made a interpolation for filling the huge gaps by using lidar measurements that have small area. 
+We proposed a method to overcome the null value problem. This method fills the gaps (null values at the depth images) by using the LiDAR measurements. Firstly, a segmentation of the gaps are made and then the LiDAR measurements are taken into account to fill the gap segments that are overlapped with LiDAR measurements. Again, due to the sparse nature of the LiDAR measurements, we made a interpolation for filling the huge gaps by using LiDAR measurements that have small area. 
 
 
-\paragraph{Obtaining Depth Frame From Lidar Data}
+\paragraph{Obtaining Depth Frame From LiDAR Data}
 
-After making the calibrations for stereo camera and the Lidar, we know all the transformation matrices to generate the depth image from point cloud data. To project the 3D points into the 2D depth frame space we use the pinhole camera model. 
-%% TODO: Pinhole camera model daha mu uygun? use the intrinsic parameters and the known transformation matrices.
+After making the calibrations for stereo camera and the LiDAR, we know all the transformation matrices to generate the depth image from point cloud data. To project the 3D points into the 2D depth frame space we use the pinhole camera model. 
 
-\paragraph{Lidar Null Mask}
+\paragraph{LiDAR Null Mask}
 
-The lidar depth frames will have null values do to the nature of the projection of sparse point cloud data into a plane. This null values should be considered before using the lidar depth map in the algorithm.
+The LiDAR depth frames will have null values do to the nature of the projection of sparse point cloud data into a plane. This null values should be considered before using the LiDAR depth map in the algorithm.
 
-Since, our method use the stereo depth maps as a starting point and lidar depth map as rectifier of depth information of these stereo depth images, we need a mask of null values to eliminate the spurious pixels (depth entities) at the post-processing part of our algorithm.
+Since, our method use the stereo depth maps as a starting point and LiDAR depth map as rectifier of depth information of these stereo depth images, we need a mask of null values to eliminate the spurious pixels (depth entities) at the post-processing part of our algorithm.
 
 \paragraph{Stereo Infill}
 
-\subsection{PG: Papoulis GerchBerg}
-%% \subsubsection{PG Background}
-%% Cite other papers about papoulis gerchberg, super resolution
+\subsection{PG: Papoulis Gerchberg}
+We first intended to use Papoulish-Gerchberg algorithm as a pre-processing method to up sample the only LiDAR data. But the sparsity of the LiDAR data made it challenging to work with.
 
+We tried to apply zero-padding to empty regions of the depth frame obtained by the LiDAR samples. Since the Papoulish-Gerchberg method is an iterative method, zero background filling caused high amount of iterations to get reasonable results. And due to the sparse data especially in the vertical axis, the regions far from original LiDAR samples never get good results like the closer ones.
+%% add an image to represent the papoulis with zero-padding
+
+Then to decrease number of iterations, we tried to initialize the background with mean of actual LiDAR samples. Since the mean value is much closer to the actual depth of the neighboring samples, it significantly reduced the iterations. But the problem with the sparsity of LiDAR data was still present.
+%% add another figure for mean filling
+
+We need more significant data to overcome this problem. The initial solution was the using previous work of our colleague @ismail-uyanik, {Enhancing 3D range image measurement density via dynamic Papoulis-Gerchberg algorithm} along with the mean filling method.
+%% cite the paper from kuzucu-elvan
+%% add another image explaining the plan
 \subsubsection{Our Approach}
-\subsubsection{Use of Band Reject Filter in PG}
-\subsubsection{Evaluated PG for Our Work}
+As the purpose of this study is to investigate the potential of integrating data obtained from stereo cameras and LiDAR measurements, we also have the depth information from stereo image pair. Our motivation of this paper's work turned to merge both processes, up sampling of LiDAR data and fusing the depth information obtained from both sources. This method extremely decreased the need of processing power, and allowed real-time application of the sensor fusion even in mobile computing devices.
+Basically the method is nothing but proposing the background of lidar measurements as depth frame from stereo pair instead of using only a mean value. Since the background filling is not non-significant data, we have mostly overcame the problem with sparsity of LiDAR measurements.
+We also made some modifications and improvements to the standard 2D Papoulish-Gerchberg algorithm to match our needs better.
+\paragraph{Use of Band Reject Filter in PG}
+\paragraph{Evaluated PG for Our Work}
+
 \subsection{Post-Proc}
-\subsubsection{Removal of Trivial Aumented Data}
+
+The post-processing consinst of two major parts 
+
+\subsubsection{Removal of Trivial Augmented Data}
 
 \section{Implementation} \label{implementation}
+
+The implementation of a proposed method is essential for experiments. Because of the robotic fields requirements, there are some constraints about the frequency of the algorithm, data rate of te sensors, and some other important facts. To accomplish all of this constraints, we use the power of the mathematics and the linear algebra. 
+
+\subsection{Building the Algorithm}
+
 \subsection{Adopting the Algorithm to Linear Algebra}
 
 \section{Optimization}
@@ -143,7 +166,7 @@ As defined in the previous section \ref{implementation}, our method is developed
 \subsection{Experimenting our Algorithm With Kitti Benchmark Suite}
 %% Mention the dataset preparation picking data from different datasets
 
-\subsubsection{Effect of Shape and Format of Lidar Data}
+\subsubsection{Effect of Shape and Format of LiDAR Data}
 \subsubsection{Experiment Scenarios}
 
 \subsection{Experiments With Our Sensor Suit}
@@ -151,200 +174,14 @@ As defined in the previous section \ref{implementation}, our method is developed
 %% Realtime 
 
 \subsubsection{Sensor Suit}
-\paragraph{Upsampling of Lidar Data}
-%% Further improvements dynamic lidar upsampling with kalman
+\paragraph{Upsampling of LiDAR Data}
+%% Further improvements dynamic LiDAR upsampling with kalman
 
 \subsubsection{Experiment Scenarios}
 
 
 \section{Results}
 
-\subsection{Abbreviations and Acronyms}\label{AA}
-
-
-\subsection{Units}
-\begin{itemize}
-\item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive''.
-\item Avoid combining SI and CGS units, such as current in amperes and magnetic field in oersteds. This often leads to confusion because equations do not balance dimensionally. If you must use mixed units, clearly state the units for each quantity that you use in an equation.
-\item Do not mix complete spellings and abbreviations of units: ``Wb/m\textsuperscript{2}'' or ``webers per square meter'', not ``webers/m\textsuperscript{2}''. Spell out units when they appear in text: ``. . . a few henries'', not ``. . . a few H''.
-\item Use a zero before decimal points: ``0.25'', not ``.25''. Use ``cm\textsuperscript{3}'', not ``cc''.)
-\end{itemize}
-
-\subsection{Equations}
-Number equations consecutively. To make your 
-equations more compact, you may use the solidus (~/~), the exp function, or 
-appropriate exponents. Italicize Roman symbols for quantities and variables, 
-but not Greek symbols. Use a long dash rather than a hyphen for a minus 
-sign. Punctuate equations with commas or periods when they are part of a 
-sentence, as in:
-\begin{equation}
-a+b=\gamma\label{eq}
-\end{equation}
-
-Be sure that the 
-symbols in your equation have been defined before or immediately following 
-the equation. Use ``\eqref{eq}'', not ``Eq.~\eqref{eq}'' or ``equation \eqref{eq}'', except at 
-the beginning of a sentence: ``Equation \eqref{eq} is . . .''
-
-\subsection{\LaTeX-Specific Advice}
-
-Please use ``soft'' (e.g., \verb|\eqref{Eq}|) cross references instead
-of ``hard'' references (e.g., \verb|(1)|). That will make it possible
-to combine sections, add equations, or change the order of figures or
-citations without having to go through the file line by line.
-
-Please don't use the \verb|{eqnarray}| equation environment. Use
-\verb|{align}| or \verb|{IEEEeqnarray}| instead. The \verb|{eqnarray}|
-environment leaves unsightly spaces around relation symbols.
-
-Please note that the \verb|{subequations}| environment in {\LaTeX}
-will increment the main equation counter even when there are no
-equation numbers displayed. If you forget that, you might write an
-article in which the equation numbers skip from (17) to (20), causing
-the copy editors to wonder if you've discovered a new method of
-counting.
-
-{\BibTeX} does not work by magic. It doesn't get the bibliographic
-data from thin air but from .bib files. If you use {\BibTeX} to produce a
-bibliography you must send the .bib files. 
-
-{\LaTeX} can't read your mind. If you assign the same label to a
-subsubsection and a table, you might find that Table I has been cross
-referenced as Table IV-B3. 
-
-{\LaTeX} does not have precognitive abilities. If you put a
-\verb|\label| command before the command that updates the counter it's
-supposed to be using, the label will pick up the last counter to be
-cross referenced instead. In particular, a \verb|\label| command
-should not go before the caption of a figure or a table.
-
-Do not use \verb|\nonumber| inside the \verb|{array}| environment. It
-will not stop equation numbers inside \verb|{array}| (there won't be
-any anyway) and it might stop a wanted equation number in the
-surrounding equation.
-
-\subsection{Some Common Mistakes}\label{SCM}
-\begin{itemize}
-\item The word ``data'' is plural, not singular.
-\item The subscript for the permeability of vacuum $\mu_{0}$, and other common scientific constants, is zero with subscript formatting, not a lowercase letter ``o''.
-\item In American English, commas, semicolons, periods, question and exclamation marks are located within quotation marks only when a complete thought or name is cited, such as a title or full quotation. When quotation marks are used, instead of a bold or italic typeface, to highlight a word or phrase, punctuation should appear outside of the quotation marks. A parenthetical phrase or statement at the end of a sentence is punctuated outside of the closing parenthesis (like this). (A parenthetical sentence is punctuated within the parentheses.)
-\item A graph within a graph is an ``inset'', not an ``insert''. The word alternatively is preferred to the word ``alternately'' (unless you really mean something that alternates).
-\item Do not use the word ``essentially'' to mean ``approximately'' or ``effectively''.
-\item In your paper title, if the words ``that uses'' can accurately replace the word ``using'', capitalize the ``u''; if not, keep using lower-cased.
-\item Be aware of the different meanings of the homophones ``affect'' and ``effect'', ``complement'' and ``compliment'', ``discreet'' and ``discrete'', ``principal'' and ``principle''.
-\item Do not confuse ``imply'' and ``infer''.
-\item The prefix ``non'' is not a word; it should be joined to the word it modifies, usually without a hyphen.
-\item There is no period after the ``et'' in the Latin abbreviation ``et al.''.
-\item The abbreviation ``i.e.'' means ``that is'', and the abbreviation ``e.g.'' means ``for example''.
-\end{itemize}
-An excellent style manual for science writers is \cite{b7}.
-
-\subsection{Authors and Affiliations}
-\textbf{The class file is designed for, but not limited to, six authors.} A 
-minimum of one author is required for all conference articles. Author names 
-should be listed starting from left to right and then moving down to the 
-next line. This is the author sequence that will be used in future citations 
-and by indexing services. Names should not be listed in columns nor group by 
-affiliation. Please keep your affiliations as succinct as possible (for 
-example, do not differentiate among departments of the same organization).
-
-\subsection{Identify the Headings}
-Headings, or heads, are organizational devices that guide the reader through 
-your paper. There are two types: component heads and text heads.
-
-Component heads identify the different components of your paper and are not 
-topically subordinate to each other. Examples include Acknowledgments and 
-References and, for these, the correct style to use is ``Heading 5''. Use 
-``figure caption'' for your Figure captions, and ``table head'' for your 
-table title. Run-in heads, such as ``Abstract'', will require you to apply a 
-style (in this case, italic) in addition to the style provided by the drop 
-down menu to differentiate the head from the text.
-
-Text heads organize the topics on a relational, hierarchical basis. For 
-example, the paper title is the primary text head because all subsequent 
-material relates and elaborates on this one topic. If there are two or more 
-sub-topics, the next level head (uppercase Roman numerals) should be used 
-and, conversely, if there are not at least two sub-topics, then no subheads 
-should be introduced.
-
-\subsection{Figures and Tables}
-\paragraph{Positioning Figures and Tables} Place figures and tables at the top and 
-bottom of columns. Avoid placing them in the middle of columns. Large 
-figures and tables may span across both columns. Figure captions should be 
-below the figures; table heads should appear above the tables. Insert 
-figures and tables after they are cited in the text. Use the abbreviation 
-``Fig.~\ref{fig}'', even at the beginning of a sentence.
-
-\begin{table}[htbp]
-\caption{Table Type Styles}
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
-\textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-\cline{2-4} 
-\textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
-\hline
-copy& More table copy$^{\mathrm{a}}$& &  \\
-\hline
-\multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
-\end{tabular}
-\label{tab1}
-\end{center}
-\end{table}
-
-\begin{figure}[htbp]
-\centerline{\includegraphics{fig1.png}}
-\caption{Example of a figure caption.}
-\label{fig}
-\end{figure}
-
-Figure Labels: Use 8 point Times New Roman for Figure labels. Use words 
-rather than symbols or abbreviations when writing Figure axis labels to 
-avoid confusing the reader. As an example, write the quantity 
-``Magnetization'', or ``Magnetization, M'', not just ``M''. If including 
-units in the label, present them within parentheses. Do not label axes only 
-with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization 
-\{A[m(1)]\}'', not just ``A/m''. Do not label axes with a ratio of 
-quantities and units. For example, write ``Temperature (K)'', not 
-``Temperature/K''.
-
-\section*{Acknowledgment}
-
-The preferred spelling of the word ``acknowledgment'' in America is without 
-an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B. 
-G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
-acknowledgments in the unnumbered footnote on the first page.
-
-\section*{References}
-
-Please number citations consecutively within brackets \cite{b1}. The 
-sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference 
-number, as in \cite{b3}---do not use ``Ref. \cite{b3}'' or ``reference \cite{b3}'' except at 
-the beginning of a sentence: ``Reference \cite{b3} was the first $\ldots$''
-
-Number footnotes separately in superscripts. Place the actual footnote at 
-the bottom of the column in which it was cited. Do not put footnotes in the 
-abstract or reference list. Use letters for table footnotes.
-
-Unless there are six authors or more give all authors' names; do not use 
-``et al.''. Papers that have not been published, even if they have been 
-submitted for publication, should be cited as ``unpublished'' \cite{b4}. Papers 
-that have been accepted for publication should be cited as ``in press'' \cite{b5}. 
-Capitalize only the first word in a paper title, except for proper nouns and 
-element symbols.
-
-For papers published in translation journals, please give the English 
-citation first, followed by the original foreign-language citation \cite{b6}.
-
-\begin{thebibliography}{00}
-\bibitem{b1} G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions,'' Phil. Trans. Roy. Soc. London, vol. A247, pp. 529--551, April 1955.
-\bibitem{b2} J. Clerk Maxwell, A Treatise on Electricity and Magnetism, 3rd ed., vol. 2. Oxford: Clarendon, 1892, pp.68--73.
-\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
-\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
-\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
-\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
-\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
-\end{thebibliography}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
