Technical approach introductory revised

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -86,11 +86,11 @@ Further works opened the papoulis-gerchberg algorithm new using areas like signa
 
 %% Paper about signal restoration
 %% Paper about super resolution
-Another application of this algorithm is used for image inpainting by \cite{pg-image-inpaint-2009}. They introduce the PG for this specific scenerio but it has some precautions to use for us. The images they used are extremely dense when comparing with the LiDAR. Also, they have single sensory image but we need to optain a fusion. 
+An application of this algorithm for image inpainting was proposed by \cite{pg-image-inpaint-2009}, wherein the Papoulis-Gerchberg (PG) algorithm is adapted for this particular scenario. However, there are several caveats to its application within our context. Primarily, the images utilized in their study exhibit significantly higher density compared to LiDAR data. Furthermore, their methodology is predicated upon the utilization of a singular sensory modality, whereas our objective necessitates the achievement of fusion across multiple sensors.
 
-Another work done by \cite{ozbay2015high} that introduce an extended version of PG for 3D point cloud data that is driven by a LiDAR sensor. They use this as an upsampling to cope with delayed points when using LiDAR in high resolution mode due to the low scan rates of cylindirical scanning ones. But appearantly, it also use single sensory system
+Another noteworthy contribution is made by \cite{ozbay2015high}, presenting an enhanced iteration of the PG algorithm tailored for 3D point cloud data derived from LiDAR sensors. Their method focuses on upsampling to mitigate the latency in point acquisition observed when operating LiDAR at high-resolution modes, attributable to the inherently slow scan rates of cylindrical scanning systems. Nevertheless, it is important to note that this approach, too, relies on a singular sensory system.
 
-We introduce our novel approach my putting another extension of PG to the litarature that is the first one uses multi-sensory system. The nature of PG consists some elements. 
+The utilization of the Papoulis-Gerchberg (PG) algorithm within our framework is primarily motivated by its deterministic nature, setting it apart from machine learning-based methodologies that often rely on probabilistic outcomes. A closer examination of the PG algorithm's underlying principles reveals two pivotal components: a densely populated base image intended for gap-filling using points of known accuracy, and the employment of these high-confidence points for iterative refinement. This paradigm bears a striking resemblance to the challenges inherent in sensor fusion. In our methodology, stereo depth images serve as the densely populated base analogous to the PG algorithm's framework, while LiDAR sparse data represent the high-confidence points. This analogy forms the cornerstone of our approach, leveraging the PG algorithm's architecture to integrate multi-sensorial data, thereby pioneering a novel application of PG in the realm of sensor fusion.
 
 \subsection{Pre-Processing}
 
